Fixed issue with double tap on iOS, removed iOS input styling

--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -59,3 +59,11 @@ nav {
     }
   }
 }
+
+.is-touch-device {
+  nav ul li {
+    &:hover:after {
+      display: none;
+    }
+  }
+}
