--- a/src/assets/scss/pages/_articles.scss
+++ b/src/assets/scss/pages/_articles.scss
@@ -106,7 +106,7 @@
         margin-bottom: 1em;
 
         .article-title {
-          padding: .4em 1.2em;
+          padding: .8em 1.2em;
         }
 
         h1 {
