--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -34,6 +34,7 @@
     font-family: $main-font;
     color: $light-black;
     background: none;
+    border-radius: 0;
     @include transition(.5s border-bottom-color);
 
     &:focus {
